Now with more speed, and JSONPointer, more docs, too

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -5,3 +5,6 @@ LDFLAGS+=$(shell pkg-config glib-2.0 --libs)
 
 glib-datatypes: glib-datatypes.c
 	$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)
+
+clean:
+	rm -f glib-datatypes
