improved ascii tables, tests..

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,6 +4,9 @@ all: $(TESTMODS)
 	./json_test ../share/*
 	./jpr_test
 	./unescape
+	./json_test ../share/jsc/pass*.json
+	JSONSL_FAIL_TESTS=1 ./json_test ../share/jsc/fail*.json
+	@echo "All Tests OK"
 
 %: %.c
 	$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)
