Some doc tweaks and cleanups

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,9 +6,9 @@ all: $(TESTMODS)
 	./unescape
 	./json_test ../share/jsc/pass*.json
 	JSONSL_FAIL_TESTS=1 ./json_test ../share/jsc/fail*.json
+	@echo "   Some tests were skipped."
+	@echo "   See share/jsc/nyi_fail/README.skipped for details"
 	@echo "All Tests OK"
-	@echo "These files were skipped. See tests/jsc/nyi_fail for more info"
-	@ls ../share/jsc/nyi_fail/
 
 %: %.c
 	$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)
