Add new strict match function
jsonsl_path_match is more strict than the jsonpointer equivalent, but
requires manual path construction (which may perhaps be quicker in any
event).

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,6 +10,8 @@ ADD_EXECUTABLE(unescape unescape.c)
 TARGET_LINK_LIBRARIES(unescape jsonsl)
 
 ADD_EXECUTABLE(cxxtest cxxtest.cpp)
+ADD_EXECUTABLE(match_test match_test.c)
+TARGET_LINK_LIBRARIES(match_test jsonsl)
 
 FILE(GLOB samples_ok ${CMAKE_BINARY_DIR}/share/*
                      ${CMAKE_BINARY_DIR}/jsc/pass*.json)
@@ -19,3 +21,4 @@ ADD_TEST(badparse failure_test ${samples_bad})
 ADD_TEST(jsonpointer jpr_test)
 ADD_TEST(unescape unescape)
 ADD_TEST(cxxtest cxxtest)
+ADD_TEST(match_test match_test)
