Mostly adding a test with cppcheck

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,12 @@ compiler:
   - gcc
   - clang
 
-script: make && make check
+addons:
+  apt:
+    packages:
+      - cppcheck
+
+script:
+  - make
+  - make check
+  - cppcheck --quiet *.h *.c tests/ perf/ examples/
